--- a/packages/hoppscotch-cli/package.json
+++ b/packages/hoppscotch-cli/package.json
@@ -45,6 +45,7 @@
     "axios": "1.7.7",
     "chalk": "5.3.0",
     "commander": "12.1.0",
+    "form-data": "4.0.1",
     "isolated-vm": "5.0.1",
     "js-md5": "0.8.3",
     "lodash-es": "4.17.21",
