--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -157,6 +157,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         args: ${{ matrix.args }}
+        projectPath: packages/hoppscotch-desktop
 #    - name: Install dependencies
 #      shell: bash
 #      run: |
