feat: workflow analysis

--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -158,6 +158,7 @@ jobs:
       with:
         args: ${{ matrix.args }}
         projectPath: packages/hoppscotch-desktop
+        includeDebug: true
 #    - name: Install dependencies
 #      shell: bash
 #      run: |
