--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -53,5 +53,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           args: ${{ matrix.args }}
-        run: |
-          cd packages/hoppscotch-desktop
+          projectPath: 'packages/hoppscotch-selfhost-desktop/src-tauri'
