--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -31,7 +31,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
