--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -82,18 +82,18 @@ jobs:
               libayatana-appindicator3-dev \
               librsvg2-dev
 
-      - name: Setting up Windows Environment and injecting before bundle command (Windows only)
-        if: matrix.platform == 'windows-latest'
-        shell: bash
-        env:
-          WINDOWS_SIGN_COMMAND: trusted-signing-cli -e ${{ secrets.AZURE_ENDPOINT }} -a ${{ secrets.AZURE_CODE_SIGNING_NAME }} -c ${{ secrets.AZURE_CERT_PROFILE_NAME }} %1
-        run: |
-          cd packages/hoppscotch-agent
-          # Inject signing command into main conf.
-          cat './src-tauri/tauri.conf.json' | jq '.bundle .windows += { "signCommand": env.WINDOWS_SIGN_COMMAND}' > './src-tauri/temp.json' && mv './src-tauri/temp.json' './src-tauri/tauri.conf.json'
-          # Inject signing command into portable conf.
-          cat './src-tauri/tauri.portable.conf.json' | jq '.bundle .windows += { "signCommand": env.WINDOWS_SIGN_COMMAND}' > './src-tauri/temp_portable.json' && mv './src-tauri/temp_portable.json' './src-tauri/tauri.portable.conf.json'
-          cargo install trusted-signing-cli@0.3.0
+#      - name: Setting up Windows Environment and injecting before bundle command (Windows only)
+#        if: matrix.platform == 'windows-latest'
+#        shell: bash
+#        env:
+#          WINDOWS_SIGN_COMMAND: trusted-signing-cli -e ${{ secrets.AZURE_ENDPOINT }} -a ${{ secrets.AZURE_CODE_SIGNING_NAME }} -c ${{ secrets.AZURE_CERT_PROFILE_NAME }} %1
+#        run: |
+#          cd packages/hoppscotch-agent
+#          # Inject signing command into main conf.
+#          cat './src-tauri/tauri.conf.json' | jq '.bundle .windows += { "signCommand": env.WINDOWS_SIGN_COMMAND}' > './src-tauri/temp.json' && mv './src-tauri/temp.json' './src-tauri/tauri.conf.json'
+#          # Inject signing command into portable conf.
+#          cat './src-tauri/tauri.portable.conf.json' | jq '.bundle .windows += { "signCommand": env.WINDOWS_SIGN_COMMAND}' > './src-tauri/temp_portable.json' && mv './src-tauri/temp_portable.json' './src-tauri/tauri.portable.conf.json'
+#          cargo install trusted-signing-cli@0.3.0
 
       - name: Set platform-specific variables
         run: |
