--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-22.04, windows-latest]
+        platform: [windows-latest]
 
     runs-on: ${{ matrix.platform }}
     defaults:
@@ -136,6 +136,7 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
+          cd packages/hoppscotch-backend && pnpm exec prisma generate
           pnpm install
 
       - name: Build Tauri app (Linux)
