feat: workflow analysis

--- a/.github/workflows/build-hoppscotch-agent.yml
+++ b/.github/workflows/build-hoppscotch-agent.yml
@@ -136,7 +136,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          cd packages/hoppscotch-backend && pnpm exec prisma generate
+          cd packages/hoppscotch-backend
+          pnpm exec prisma generate
           pnpm install
 
       - name: Build Tauri app (Linux)
